2007-01-09  Dennis Cranston <dennis_cranston@yahoo.com>

	* gnome-screenshoot.c:  Register "applets-screenshooter" in
	the icon factory so gtk_image_new_from_stock() works.  HIG
	fixes for interactive dialog. (#394941)

2007-01-07  Emmanuele Bassi  <ebassi@gnome.org>

	A gnome-screenshot.c
	D gnome-panel-screenshot.c
	D gnome-panel-screenshot.glade

	* Makefile.am:
	* gnome-screenshot.c: Remove mention of gnome-panel-screenshot
	from the build and code: this is not a panel applet anymore;
	implement the interactive dialog for controlling the settings
	of the screenshot without using the command line switching.

	* screenshot-save.c: Honour TMPDIR using g_get_tmp_dir() and
	use a nicer layout for creating a unique directory for the
	temporary screenshot file: now use a <pid>-<try-n> directory
	under the ${TMPDIR}/gnome-screenshot root.

	* screenshot-utils.[ch]: Add utility functions for showing a
	dialog in case of error.

	* gnome-screenshot.desktop.in: Use the interactive mode when
	launching gnome-screenshot from the menu.

2007-01-04  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-panel-screenshot.c: Add a call to initialise the
	auth manager. (#362903)

2006-12-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-save.c: Apply long-forgotten patch: if we can
	successfully read something from the child pipe, then it's
	surely an error; seems to fix gnome-screenshot on *BSD
	boxes. (hopefully closes #161525)

2006-10-18  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gnome-panel-screenshot.c: Remove the unneeded headers
	Xmu/WinUtil.h and cursorfont.h. (closes #167089)

2006-10-18  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-dialog.c: Remove the useless target
	"x-special/gnome-icon-list", as we already support
	text/uri-list and we don't pass any of the icon
	data with DnD.
	
	(drag_data_get): Fix the URI passed via DnD using the
	gtk_selection_data_set_uris() API function instead of
	manually building the URI list. (closes #361016, reported